--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@emotion/core": "^10.0.35",
     "@rebass/forms": "^4.0.6",
     "@rebass/preset": "^4.0.5",
-    "cropperjs": "^1.5.11",
     "emotion-theming": "^10.0.27",
     "next": "9.5.2",
     "next-images": "^1.4.1",
     "react": "16.13.1",
+    "react-cropper": "^2.1.7",
     "react-dom": "16.13.1",
+    "react-file-drop": "^3.1.2",
     "react-inlinesvg": "^2.2.2",
     "react-redux": "^7.2.1",
     "rebass": "^4.0.7",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
+    "@types/react-cropper": "^1.3.0",
     "@types/react-inlinesvg": "^1.0.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-transition-group": "^4.4.0",
