--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emotion-theming": "^10.0.27",
     "next": "9.5.2",
     "next-images": "^1.4.1",
+    "rc-slider": "^9.7.1",
     "react": "16.13.1",
     "react-cropper": "^2.1.7",
     "react-dom": "16.13.1",
