--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.13.1",
     "react-cropper": "^2.1.7",
     "react-dom": "16.13.1",
+    "react-easy-crop": "^3.3.2",
     "react-file-drop": "^3.1.2",
     "react-inlinesvg": "^2.2.2",
     "react-redux": "^7.2.1",
